{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 23,
  "lineage": "fccba072-312d-ddff-c74f-4d79f4cf47f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:internet-gateway/igw-0932d03015ccffd6d",
            "id": "igw-0932d03015ccffd6d",
            "owner_id": "684829100177",
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:route-table/rtb-0d181611052f51953",
            "id": "rtb-0d181611052f51953",
            "owner_id": "684829100177",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-private-route-table"
            },
            "tags_all": {
              "Name": "example-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:route-table/rtb-0ce767a263407b1c7",
            "id": "rtb-0ce767a263407b1c7",
            "owner_id": "684829100177",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0932d03015ccffd6d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-public-route-table"
            },
            "tags_all": {
              "Name": "example-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example_public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9655b9f4ee8d9e8",
            "route_table_id": "rtb-0ce767a263407b1c7",
            "subnet_id": "subnet-07a3154c405452107"
          },
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_route_table.example_public_route_table",
            "aws_subnet.example_public_subnet_elb_1",
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0241cb2d64fdb891b",
            "route_table_id": "rtb-0ce767a263407b1c7",
            "subnet_id": "subnet-045356f53ea29ba3c"
          },
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_route_table.example_public_route_table",
            "aws_subnet.example_public_subnet_elb_1",
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013f0cb832a31d005",
            "route_table_id": "rtb-0ce767a263407b1c7",
            "subnet_id": "subnet-0546ffb86432b307d"
          },
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_route_table.example_public_route_table",
            "aws_subnet.example_public_subnet_elb_1",
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030bd8b03157a4c0a",
            "route_table_id": "rtb-0ce767a263407b1c7",
            "subnet_id": "subnet-065cbc75df7419370"
          },
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_route_table.example_public_route_table",
            "aws_subnet.example_public_subnet_elb_1",
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cb81307ed1b117f",
            "route_table_id": "rtb-0ce767a263407b1c7",
            "subnet_id": "subnet-059425b10c23fc73f"
          },
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_route_table.example_public_route_table",
            "aws_subnet.example_public_subnet_elb_1",
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070cc185fa31e2ecb",
            "route_table_id": "rtb-0ce767a263407b1c7",
            "subnet_id": "subnet-0e96c4a8b855ad62d"
          },
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_route_table.example_public_route_table",
            "aws_subnet.example_public_subnet_elb_1",
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example_private_subnet_asg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:subnet/subnet-044b67a2a7d28b036",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044b67a2a7d28b036",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684829100177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "dependencies": [
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:subnet/subnet-083b22befb8468a32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083b22befb8468a32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684829100177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "dependencies": [
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:subnet/subnet-050f945e118ec9034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050f945e118ec9034",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684829100177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "dependencies": [
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:subnet/subnet-0e752bc85bb2c216f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e752bc85bb2c216f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684829100177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "dependencies": [
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:subnet/subnet-05842d308b37fa732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05842d308b37fa732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684829100177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "dependencies": [
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:subnet/subnet-09c17b7d3368c9510",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.15.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c17b7d3368c9510",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684829100177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "dependencies": [
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example_public_subnet_elb_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:subnet/subnet-07a3154c405452107",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a3154c405452107",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684829100177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "dependencies": [
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:subnet/subnet-045356f53ea29ba3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045356f53ea29ba3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684829100177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "dependencies": [
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:subnet/subnet-0546ffb86432b307d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0546ffb86432b307d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684829100177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "dependencies": [
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:subnet/subnet-065cbc75df7419370",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065cbc75df7419370",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684829100177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "dependencies": [
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:subnet/subnet-059425b10c23fc73f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059425b10c23fc73f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684829100177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "dependencies": [
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:subnet/subnet-0e96c4a8b855ad62d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e96c4a8b855ad62d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684829100177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fdd0e39953f33779"
          },
          "dependencies": [
            "aws_vpc.example_vpc",
            "data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684829100177:vpc/vpc-0fdd0e39953f33779",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02519aad4e263804f",
            "default_route_table_id": "rtb-01b86fb380e0e2853",
            "default_security_group_id": "sg-07866777c6f4e51f7",
            "dhcp_options_id": "dopt-024887b9110de894f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fdd0e39953f33779",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b86fb380e0e2853",
            "owner_id": "684829100177"
          }
        }
      ]
    }
  ]
}